[package]
name = "twilight-components"
version = "0.1.0"
edition = "2024"
description = "A declarative macro for building Discord components with twilight-model"
license = "MIT"
repository = "https://github.com/your-username/twilight-components-macro"
keywords = ["discord", "twilight", "macro", "components"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
twilight-model = "0.17"
